# XJTU-Assignments-in-Automation

./: README.md
USCT-CG/assignments/1_MiniDraw/: CMakeLists.txt
USCT-CG/assignments/1_MiniDraw/src/: Bezier_Curve.cpp  Bezier_Curve.h  CMakeLists.txt  Circle.cpp  Circle.h  Elliptical.cpp  Elliptical.h  Eraser.cpp  Eraser.h  Free_Line.cpp  Free_Line.h  Line.cpp  Line.h  MiniDraw.cpp  MiniDraw.h  MiniDraw.pri  MiniDraw.ui  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  main.cpp  viewwidget.cpp  viewwidget.h  viewwidget.ui
XJTU-Data_Structure_and_Algorithm_Experiments/: README.md
XJTU-Data_Structure_and_Algorithm_Experiments/1_Solving-mathematical-expressions/: CMakeLists.txt  My_Stack.h  README.md  main.cpp  solving.cpp  solving.h
XJTU-Data_Structure_and_Algorithm_Experiments/2_KMP-algorithm/: CMakeLists.txt  KMP.cpp  KMP.h  MyString.cpp  MyString.h  README.md  main.cpp
XJTU-Data_Structure_and_Algorithm_Experiments/3_HuffmanTree-based-coding-decoding/: CMakeLists.txt  My_Vector.h  Node.cpp  Node.h  README.md  Tree.cpp  Tree.h  main.cpp
XJTU-Data_Structure_and_Algorithm_Experiments/4_Dijkstra-algorithm/: CMakeLists.txt  Dijkstra-algorithm.cpp  Dijkstra-algorithm.h  README.md  location_data.h  main.cpp
XJTU-Operating_Research_project/: README.md
XJTU-Operating_Research_project/data/network/: edge.txt  node.txt  社会网络数据.xls
XJTU-Operating_Research_project/data/result/: final_result_nodes.txt
XJTU-Operating_Research_project/src/: algorithm_1.py  algorithm_2.py  calculate_parameters.py  similarity_analysis.py
